[package]
name = "m10-fx-solana-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-program = "1.11"
spl-token = {version = "3.3", features = ["no-entrypoint"]}
clap = { version = "3.2", features = ["derive"] }
solana-clap-utils = "1.11"
solana-sdk = "1.11"
solana-client = "1.11"

m10-fx-solana = { path = "../program" }
