[package]
name = "m10-fx-solana"
version = "0.1.0"
edition = "2021"
publish = false

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3"
borsh = "0.9"
const-decoder = "0.2"
chainlink_solana = "1.0"
thiserror = "1.0"
getrandom = "0.2"
num-derive = "0.3"
num-traits = "0.2"
rust_decimal = { version = "1.25", features = ["borsh"] }
solana-program = "1.11"
spl-token = {version = "3.3", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]